# gestion-arrosage-jdc

./: .gitignore  Notes.md  README.md  README2.md  RTCModule.cpp  RTCModule.h  SPIFFSIniFile.cpp  SPIFFSIniFile.h  config.cpp  config.h  constants.h  cuve.cpp  cuve.h  flow.cpp  flow.h  gestion_arrosage_jdc.ino  hmi.cpp  hmi.h  html.cpp  html.h  humidity.cpp  humidity.h  module.cpp  module.h  oled.cpp  oled.h  platformio.ini  relay.cpp  relay.h  schedule.cpp  schedule.h  sketch.yaml  valve.cpp  valve.h  watering.cpp  watering.h  way.cpp  way.h  zone.cpp  zone.h
bridge/: README.md  live_refresh.py  pyproject.toml  start_bridge.py
bridge/bridge_config/: parameters.py
bridge/mock/: esp_client.py
bridge/old/: start_server_inject_polling.py
data/: config.ini  configure.html  index.html  maint.html  new.html  schedule.ini
data/old/: configure.html  index.css  index.js  index_test_menu.html  index_test_menu2.html  maint.html
data/pages/: add.html  edit.html
doc/: UI.md
doc/CSS/: CSS Reset.url  OOCSS.url
doc/Captive portals/: Captive-Portal-ESP32-src-main.cpp at main · CDFER-Captive-Portal-ESP32.url  (+1 more)
doc/Stickers/: Sticker.drawio
firmware/: .clang-format  README.md  platformio.ini
lib/: README
server/: create_gzip.py  live_refresh.py  pyproject.toml  start_server.py
src/: RTCModule.h  config.h  cuve.cpp  main.cpp  module.h  oled.cpp  relay.h  schedule.cpp  schedule.h  valve.cpp  watering.h  zone.h
src/core/: Core.h  (+3 more)
test/: test_sanity.cpp
tests/: main_captive_portal_1.cpp  main_captive_portal_2.cpp
webui/: README.md  package.json  pyproject.toml
(+216 files in other folders)
