[project]
name = "bridge"
version = "0.1.0"
description = "Python bridge for watering ESP32 API"
requires-python = ">=3.13"
dependencies = [
    "isort>=8.0.1",
    "uvicorn>=0.46.0",
    "fastapi>=0.136.1",
    "livereload>=2.7.1",
    "pydantic>=2.13.4",
    "requests>=2.34.0",
    "websockets>=16.0",
]
